--- a/notebooks/DS-IBIS.ipynb
+++ b/notebooks/DS-IBIS.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b2bacbc2",
+   "id": "491f155b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a073fafc",
+   "id": "0417d4f8",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e8037a39",
+   "id": "7fa18a00",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0ff88773",
+   "id": "c8e603f2",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f8cea534",
+   "id": "6a49ba31",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c96904fc",
+   "id": "6993fddb",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c6ef5357",
+   "id": "a4434e56",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9abc822c",
+   "id": "ea586fab",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "66683379",
+   "id": "621e0920",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d190e409",
+   "id": "cfcec1b0",
    "metadata": {},
    "source": [
     "> **INTERSECT WITH SUBJECTS THAT WE ACTUALLY HAVE ON DISK!!!**"
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc3ab618",
+   "id": "77492636",
    "metadata": {},
    "source": [
     "#### Grabbing VSA* - Adds post-covid scans to list"
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5f7e68f4",
+   "id": "e6f33de4",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "74bf0b9f",
+   "id": "aeeb9d91",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "816f8376",
+   "id": "c2c0b4a5",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5563f325",
+   "id": "09daf38c",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0817724c",
+   "id": "30a90959",
    "metadata": {},
    "outputs": [
     {
@@ -883,18 +883,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "21c517d0",
+   "execution_count": 17,
+   "id": "b32b9ce5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# inlier_keys.to_csv(\"ds-sa_inlier_keys.txt\", header=None, index=None)"
+    "inlier_keys.to_csv(\"ds-sa_inlier_keys.txt\", header=None, index=None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "018f4b9b",
+   "id": "68ccc188",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70093b14",
+   "id": "070da5d1",
    "metadata": {},
    "outputs": [],
    "source": []
