--- a/notebooks/EBDS.ipynb
+++ b/notebooks/EBDS.ipynb
@@ -22,19 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[01;32mC0038-1-1-10year-T1.nrrd\u001b[0m*  \u001b[01;32mC0038-1-1-10year-T2.nrrd\u001b[0m*\n"
+      "HCP100307.nii.gz\n"
      ]
     }
    ],
    "source": [
-    "%ls '/Human2/ImageImputation/Data/EBDS/C0038-1-1/10year/anat/'"
+    "%ls /DATA/Users/amahmood/braintyp/processed_v2/ | grep HCP"
    ]
   },
   {
