including notebooks for many datasets

--- a/notebooks/Combined_CBCL_Filter.ipynb
+++ b/notebooks/Combined_CBCL_Filter.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1cb56041",
+   "id": "4508e52c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bbba933",
+   "id": "47893ff5",
    "metadata": {},
    "source": [
     "### ABCD CBCL Filtering"
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3e1b16ba",
+   "id": "5584843c",
    "metadata": {},
    "outputs": [
     {
@@ -136,14 +136,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cb4409bb",
+   "id": "0571d3e3",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1487966/426566087.py:1: DtypeWarning: Columns (0,1,2,6,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2344956/426566087.py:1: DtypeWarning: Columns (0,1,2,6,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  header = pd.read_csv(f\"{TASKDIR}/abcd_cbcls01.txt\", sep=\"\\t\")[:1]\n"
      ]
     },
@@ -286,14 +286,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df5c5122",
+   "id": "69a40dee",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1487966/1471118219.py:1: DtypeWarning: Columns (11,15,19,23,27,31,35,39,43,47,51,55,59,63,67,71,75,79,83,87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2344956/1471118219.py:1: DtypeWarning: Columns (11,15,19,23,27,31,35,39,43,47,51,55,59,63,67,71,75,79,83,87) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  raw = pd.read_csv(f\"{TASKDIR}/abcd_cbcls01.txt\", sep=\"\\t\", skiprows=[1])\n"
      ]
     },
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a8a134c2",
+   "id": "20a5f999",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1f056f96",
+   "id": "b7f6efe7",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2882ad18",
+   "id": "5b8e0980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "87820123",
+   "id": "3c1b261f",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9961bcc3",
+   "id": "a451e37e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f4c2d266",
+   "id": "083353bb",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e516a94d",
+   "id": "b61a8d77",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ccd8de0c",
+   "id": "d1f8083b",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f5fe7d5c",
+   "id": "f9e71dbe",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8b0efec2",
+   "id": "56e2f532",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c9d2a9c8",
+   "id": "71112de2",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bf0bd2d0",
+   "id": "b6d3561e",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "87eb26e5",
+   "id": "167263db",
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb879182",
+   "id": "5733b439",
    "metadata": {},
    "source": [
     "### HCPD"
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "777ccb54",
+   "id": "0fac1c2d",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8f6f116e",
+   "id": "eb234da6",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2eead99f",
+   "id": "b576daf6",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "51534639",
+   "id": "5d5d2414",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "26990442",
+   "id": "a794b075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "416287bf",
+   "id": "6637797d",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a0c8e945",
+   "id": "efd52f94",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2b192422",
+   "id": "74b0a12f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0ccb5d87",
+   "id": "c3c34f3f",
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f28a591a",
+   "id": "49eed557",
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1525,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1392e5e5",
+   "id": "fe04b401",
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f79ff052",
+   "id": "118c83d3",
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3b0e7e09",
+   "id": "0f13955c",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,18 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f156828c",
+   "id": "791585ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inlier_keys = inlier_keys.apply(lambda x: x.replace(\"_\", \"\"))\n",
+    "outlier_keys = outlier_keys.apply(lambda x: x.replace(\"_\", \"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f0c0ccbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1612,8 +1623,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "39cc2a7b",
+   "execution_count": 33,
+   "id": "4bf1e021",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11699    NDARINV0YGRZTUF\n",
+       "266           HCD1346849\n",
+       "15256    NDARINV5784LZWF\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inlier_keys_shuffled.iloc[-3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "16a8a83c",
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1657,7 @@
        "((1320,), (165,), (165,))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,8 +1669,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "6f73b7a4",
+   "execution_count": 35,
+   "id": "ac3b2b3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,14 +1679,6 @@
     "testing.to_csv(\"../split-keys/abcd-test_keys.txt\", header=None, index=None)\n",
     "outlier_keys.to_csv(\"../split-keys/abcd-cbcl-ood_keys.txt\", header=None, index=None)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54f39e69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
