--- a/notebooks/EBDS.ipynb
+++ b/notebooks/EBDS.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -549,13 +549,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ebds_ood_keys = ebds_passing_keys.symmetric_difference(ebds_qc_passing_keys)\n",
+    "len(ebds_ood_keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "ebds_passing_keys = pd.Series(list(ebds_passing_keys))\n",
-    "ebds_passing_keys.to_csv('../split-keys/ebds_keys.txt', header=None, index=None)"
+    "ebds_ood_keys = pd.Series(list(ebds_ood_keys))\n",
+    "\n",
+    "ebds_passing_keys.to_csv('../split-keys/ebds_keys.txt', header=None, index=None)\n",
+    "ebds_ood_keys.to_csv('../split-keys/ebds-ood_keys.txt', header=None, index=None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
