adding notebook for building dataset combinations

--- a/notebooks/second_stage_builder.ipynb
+++ b/notebooks/second_stage_builder.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d25126ec",
+   "execution_count": 7,
+   "id": "02e8db1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
-    "\n",
     "splits_dir = \"../split-keys\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "27d43255",
+   "execution_count": 18,
+   "id": "d714acbd",
    "metadata": {},
    "outputs": [
     {
@@ -37,10 +36,37 @@
        " 'multisource-train_keys.txt',\n",
        " 'multisource-val_keys.txt',\n",
        " 'multisource-test_keys.txt',\n",
-       " 'hcp_keys.txt']"
+       " 'hcp_keys.txt',\n",
+       " 'mslub_keys.txt',\n",
+       " 'camcan_keys.txt',\n",
+       " 'camcan-train_keys.txt',\n",
+       " 'camcan-val_keys.txt',\n",
+       " 'camcan-test_keys.txt',\n",
+       " 'usf-train_keys.txt',\n",
+       " 'usf-val_keys.txt',\n",
+       " 'usf-test_keys.txt',\n",
+       " 'camcan-val_keys-score-model.txt',\n",
+       " 'msseg_keys.txt',\n",
+       " 'ibis-non-ds-asd_keys.txt',\n",
+       " 'usf-butterfly-train_keys.txt',\n",
+       " 'usf-butterfly-val_keys.txt',\n",
+       " 'usf-butterfly-test_keys.txt',\n",
+       " 'usf-ge-train_keys.txt',\n",
+       " 'usf-ge-val_keys.txt',\n",
+       " 'usf-ge-test_keys.txt',\n",
+       " 'usf-ge-ood_keys.txt',\n",
+       " 'multisource-young-train_keys.txt',\n",
+       " 'multisource-young-val_keys.txt',\n",
+       " 'multisource-young-test_keys.txt',\n",
+       " 'ds-finetune-train_keys.txt',\n",
+       " 'ds-finetune-val_keys.txt',\n",
+       " 'ds-finetune-test_keys.txt',\n",
+       " 'ds-multisource-train_keys.txt',\n",
+       " 'ds-multisource-val_keys.txt',\n",
+       " 'ds-multisource-test_keys.txt']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,44 +78,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "841ad84a",
+   "execution_count": 14,
+   "id": "5ca1255a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ABCD validation set will be used for hyper parameter tuning\n",
     "# Down Syndrome and BraTS are obviously not typical\n",
-    "exclude = [\"abcd-val\", \"ibis-ds-sa\", \"brats-ped\", \"brats-gli\"]\n",
+    "exclude = [\"abcd-val\", \"ibis-ds-sa\", \"brats-ped\", \"brats-gli\", \"camcan\", 'hcp']\n",
     "\n",
     "multisource_list = [\n",
     "    'abcd-train', 'abcd-test', 'abcd-cbcl-ood',\n",
-    "    'ibis-inlier', 'ibis-hr-inliers', 'ibis-atypical', 'ibis-asd', \n",
-    "    'hcp', 'ebds'\n",
+    "    'ibis-inlier', 'ibis-hr-inliers',\n",
+    "    'ibis-atypical', 'ibis-asd', 'ebds'\n",
+    "]\n",
+    "\n",
+    "ds_finetune_list = [\n",
+    "    'abcd-test', 'abcd-cbcl-ood',\n",
+    "    'ibis-inlier', 'ibis-hr-inliers',\n",
+    "    'ibis-atypical',\n",
+    "]\n",
+    "\n",
+    "ds_multisource_list = [\n",
+    "    'abcd-train',\n",
+    "    'abcd-test', 'abcd-cbcl-ood',\n",
+    "    'ibis-inlier', 'ibis-hr-inliers',\n",
+    "    'ibis-atypical',\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d30633d6",
+   "execution_count": 15,
+   "id": "c43c7802",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = f\"{splits_dir}/multisource-train_keys.txt\"\n",
+    "output_file = f\"{splits_dir}/ds-multisource-train_keys.txt\"\n",
     "with open(output_file, 'w') as outfile:\n",
-    "    for filename in multisource_list:\n",
+    "    for filename in ds_multisource_list:\n",
     "        with open(f\"{splits_dir}/{filename}_keys.txt\", 'r') as infile:\n",
     "            outfile.write(infile.read())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ffe9f750",
+   "execution_count": 16,
+   "id": "867f52ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = f\"{splits_dir}/multisource-val_keys.txt\"\n",
+    "output_file = f\"{splits_dir}/ds-multisource-val_keys.txt\"\n",
     "with open(output_file, 'w') as outfile:\n",
     "    with open(f\"{splits_dir}/abcd-val_keys.txt\", 'r') as infile:\n",
     "        outfile.write(infile.read())"
@@ -97,12 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c12975e4",
+   "execution_count": 17,
+   "id": "44501f84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = f\"{splits_dir}/multisource-test_keys.txt\"\n",
+    "output_file = f\"{splits_dir}/ds-multisource-test_keys.txt\"\n",
     "with open(output_file, 'w') as outfile:\n",
     "    with open(f\"{splits_dir}/abcd-val_keys.txt\", 'r') as infile:\n",
     "        outfile.write(infile.read())"
@@ -111,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe060f9f",
+   "id": "b6ab7377",
    "metadata": {},
    "outputs": [],
    "source": []
